@@ -3,24 +3,16 @@ Hash: SHA256
 
 DIST re2c-0.13.5.tar.gz 782725 SHA256 f3a995139af475e80a30207d02728b1e0065b0caade7375e974cb1b14861668c SHA512 56101bf01aea6f0c082b85382be34acada51d70036252581cd76ac4b2bdbc144633b97c63a94bfdba434ffb80884e11299a38853e2d805dc7ce6cf9d452c81c8 WHIRLPOOL 31e462704e3ab72fce92b62ce0bca73b256c98e48f302f6f90392c26a7235e86786f2bc5f43faedbaa60f9614098ac5d734a61abed394cd71135dd3639704210
 DIST re2c-0.13.6.tar.gz 844623 SHA256 8e463039aa8799a2957bfc00c9936232bb63b4fcb24d6ea6316170a67e5076c0 SHA512 dca2654de5f596fbaf519396b2f2c58690996c62dec32436599332b79107b5bf07c87b46630a224032ff44dc02d2c1861e16a920fbdc9251f4a538008709ceba WHIRLPOOL af810c4d8e41eb01cb4b06c86932fda6da86d1690a17cd626f3a864087a378cf685a9ae6ab170cb7581c696e08ca4474f128b51bff1d1284f2a9d2252d60f226
+DIST re2c-0.13.7.1.tar.gz 2281002 SHA256 a687816eb7e6a991e4a35af5b62c451b39664dcc270a0c83b57d90650529cf12 SHA512 d2767f2fa8521d992bd43e139a9a9fbed060238df755d7878bc87082ba48366d3db645687b02e08c87be3b67f36e3e5c860616a9c0c806a4a3cf0ff3331d2c36 WHIRLPOOL ec2454fbb4089c1faca2e7a2c5135943ac8a1b13495b7845a3929ead1407d4c0ac7f4263da86110e2d6c0ac7585f537c214188bb9a252125d1e837cf18e2345b
 EBUILD re2c-0.13.5-r1.ebuild 836 SHA256 76bbd108209a6f3dd3549967f1b66fc547622c4db78d0e83079db34051239b52 SHA512 a4e922705c4afc152500260dae3276d6df6e0f4fc7f55a00fc718b956e81bbf3f644bb11e984d77c937e971589090f3a80485c9ff31650fe21fe0e6e1b95510f WHIRLPOOL 76839e251ed77b49ff3915f398c8332c1ea1da985dec0e91c952d985daaaa4e063d19a6dd41209f47ce37b60e114b2e7916b9c7e86b06e54a329f3781ba3203e
 EBUILD re2c-0.13.6.ebuild 723 SHA256 1da008a8b2e83fcd28be864b4b6bb7e51932eb9d8a0278be65bea2fcbc8d5b3e SHA512 2bdceeddf663575875c426ab0e38814af2881516c889804f3dfd8ec8f6299532f94dbe13839ed21e4097530818fdc7ff3a98c7cfcfa8bf6804d5deec930e0b10 WHIRLPOOL 592e0ff23e70fa61713a71a97af255a8397777b3c8dd7c4db132cf8c187287c799a3f142f634d8c150c637e2caf778d9776e2a87b00761a3fe1ba766c1a36529
-MISC ChangeLog 9422 SHA256 3c0fb53fe425fd34bdf850ca707492c7d2450dec6f4f229d4df3844bc5d28399 SHA512 d7ba47444b2fff9b26699a2d30781870a81a4885a93c6b2b49e77e9cb44cc33eaaf2c8649c492fac4697647963d53320acaad88dac2d330c5adebf4519c06535 WHIRLPOOL cbb864d37146fb44de8e92fb5f6f63ffdd7dca3211f8600268a523fc6a0fb0a3f3c39492495577c2ddf3c7e6dbf0996f48e8dc2c8cba42b61c2fae618a93e64f
+EBUILD re2c-0.13.7.1.ebuild 725 SHA256 5a698764e33a7ba50526ad9232de8935a16ffbb27f2d3a61468a967f312e4b1c SHA512 5ac7619a9c60f6eba6fb4719ab97b657512ad956fb4ce0205801e21de496f52671f3a04d6ad41233c4e55d0899e86400c9e77f86123ce0366be1fced17cc46a4 WHIRLPOOL 6018900632f04074cacbab0f338359c3c975acedafc3e9879ee6f685db69c9bf6a094dfb0efd3abf5c2ad5ab17dbb216f7e55f95b32add7576a023cb045d53c5
+MISC ChangeLog 9546 SHA256 cbdf5fa025c99f13bc608e30fe6face52a4188fe8b6827134014fc9bd1f53874 SHA512 c7f94b950411d722e4b54dc297fbc2080d8eca04af603b2a1805a229e3824fbd7fbda5fcba37a8eed10650138680b05ebb0010f396bc77a77ad6f59a22378ade WHIRLPOOL e67ae766710f37923a4d65df4ba5f1fb78333152725096883262e1b92072eff961b47b19d59d79a16cf93b7e5110990e7fa3f8900d8cf68c20318f3bb354eba0
 MISC metadata.xml 204 SHA256 f3aeb60df346d19b4d43cea2b2916d51674d99dabfce252723548687909cbd6b SHA512 f97ac61dcf6e780d89337c14c3cebae1af93a1246bf521bbec4f008ae43324dd6f3869cd5aec03e4ddde5220b57a9decaa6612dbae880d21a9c59267635e688f WHIRLPOOL aa295b44397d48d7d0ff8917d1812d73389288c4e6fa9d226bbdfc108ffe386cf83d67bfc019428fd28b119fb73cc185df80d377a55399cfadd61acc3853edc3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTlk/XAAoJEPGu1DbS6WIA1xwQAJrhH7BDAO+DQLTNmFZon411
-RGHNbQ09ixR7ZhxojRAwCe3loerUi88nJbL7y2xVLJlj/FZgGnnW79rf+eIuS3kP
-AIJZ6KsEYpWsHTVKC7RWUTArVX1Dkl0cso3LIYH3DRqgcjKjAlarfd+pP6xRr7sv
-oURgFgGKKfBXnnEQmVTAEzQlIVc3fO58jPU66cKflgdKLqYO/rpfaBL//qW3VYeZ
-U1uClaDfbCd/CMTiUN9Uikx31/T38cvR+jiSTSNQZyZDuFjQHFlrT9JWIcduGVeE
-V+alZShegMrk7wW7MYxHjr2tQpmVSOTHhdD9ETEK2Lxb1NSCA7PkR3WfXJ1874q8
-JI8MkGsp4VhOe9kduac6cm8ImGihrjbWRwzT5DJ1B8BoZKki1GCHBSJdrptxN8oR
-EBovqW1nqIcyBVdFyu4d1BeP4I/qTj2XuN1Jy2CfrzoBHG9A9WFL8um2lC7jGDFU
-+ISzNtuc8M1SJwg/zOTMpebCY2MHsDC4YXBVwUThOG9mwBkOLX78hLSAX4qlFUpi
-9stLkwrbfw7c3JWUatAzZUKnp2Yi7/RNYy10cHhtkpfE2whUgzbxxk95rXNcnrNC
-1fOuYsjOzv3oA7wlnC5zxmbD0VC3rt0zhMDOxFM47u7J4/xv1WVyZmjgVFrrUkLJ
-JNRk7iBIDXzBVeJWXdMz
-=KCAm
+iEYEAREIAAYFAlPTbuEACgkQcaHudmEf86padACfS0X45vaQUQmEtYgBLoEzhvt4
+LSQAoIE/5yy5GVPl2qZ7hRwpoxQntQk+
+=Fyf1
 -----END PGP SIGNATURE-----
