@@ -1,0 +1,21 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/re2c/re2c-0.13.7.1.ebuild,v 1.1 2014/07/26 09:03:27 slyfox Exp $
+
+EAPI=5
+
+DESCRIPTION="tool for generating C-based recognizers from regular expressions"
+HOMEPAGE="http://re2c.sourceforge.net/"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
+
+LICENSE="public-domain"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+
+src_install() {
+	dobin re2c
+	doman re2c.1
+	dodoc README CHANGELOG doc/*
+	docinto examples
+	dodoc examples/*.c examples/*.re
+}
