@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/re2c
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/re2c/ChangeLog,v 1.71 2014/06/10 00:22:40 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/re2c/ChangeLog,v 1.72 2014/07/26 09:03:27 slyfox Exp $
+
+*re2c-0.13.7.1 (26 Jul 2014)
+
+  26 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> +re2c-0.13.7.1.ebuild:
+  Version bump.
 
   10 Jun 2014; Mike Frysinger <vapier@gentoo.org> re2c-0.13.5-r1.ebuild,
   re2c-0.13.6.ebuild:
